[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Player-scripts/RespawnCrystal.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Respawn Crystal.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/PlayerDetectionArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Shadows/crystalShadow.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/tinyStatBarsCrystal2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/tinyStatBarsCrystal1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Enemies/TinyHealthBar.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=10]
radius = 1.0
height = 2.0

[sub_resource type="CircleShape2D" id=11]
radius = 19.105

[sub_resource type="CircleShape2D" id=12]
radius = 37.0

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("crystal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("crystal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_death_animation_done"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("crystal:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=15]
resource_name = "idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("crystal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("crystal:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}

[node name="RespawnCrystal" type="KinematicBody2D"]
collision_layer = 128
script = ExtResource( 1 )

[node name="crystal" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 20

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="PlayerDetectionArea" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
shape = SubResource( 11 )

[node name="RechargeRange" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="RechargeRange" index="0"]
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/death = SubResource( 14 )
anims/idle = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TinyHealthBar" parent="." instance=ExtResource( 7 )]

[node name="TextureProgress" parent="TinyHealthBar" index="0"]
margin_left = -8.0
margin_top = -7.0
margin_right = 32.0
margin_bottom = 33.0
max_value = 20.0
value = 20.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[editable path="PlayerDetectionArea"]
[editable path="RechargeRange"]
[editable path="TinyHealthBar"]
